FIXED: Better support for high-DPI (Retina) displays.
FIXED: Disable integer scaling menu item if SDL version is too old.
DONE: Save screenshots and maps into a separate folder and add numbers to the filenames.
FIXED: Made the exit door fix configurable.
DONE: Added support for PC speaker sounds. Use command-line parameter "stdsnd".
DONE: Added support for colored torch flames.
FIXED: Torches appearing in the leftmost column are now animated. (They are actually in the rightmost column of the left-side room.)

2019 October 13
=================
(version 1.20)

FIXED: Fixed crash on Linux when the prince fell out of the level while a guard was active.
FIXED: With start_in_blind_mode enabled, moving objects were not displayed until blind mode was toggled off+on.
FIXED: Fix upside-down screen when using PRINCE.EXE from v1.3 or v1.4.
FIXED: Tell Windows that SDLPoP is DPI aware to prevent unwanted stretching.
DONE: Added customization option for loose floor delay. (Used in Neon Persia.)
FIXED: Fix detection of "allow triggering any tile" hack.
DONE: Enable use_custom_options by default in the INI.
FIXED: Fix priorities of sword and spike sounds. (As in PoP 1.3.)
	The "spiked" sound didn't interrupt the normal spikes sound when the prince ran into spikes.
	With PoP 1.3 sounds, the "guard hurt" sound didn't play when you hit a guard directly after parrying.

(no release date yet)
=================
(upcoming version)

FIXED: Skeletons not on level 3 did not behave like skeletons.
FIXED: Don't crash if the intro music is interrupted by Tab in PC Speaker mode.
FIXED: Don't switch to PC Speaker mode if there is a mod name in the replay file.
DONE: Detect guard skill customizations in PRINCE.EXE. (Used in Illusions of Persia, for example.)
	TODO: Should we add the guard skill options to the INI, the CFG, the replays, or the settings menu?
FIXED: Don't draw the right edge of loose floors on the left side of a potion or sword.